--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
+    "formik-material-ui-lab": "0.0.8",
+    "history": "^5.0.0",
+    "perfect-scrollbar": "^1.5.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
