--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.10.6",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.17",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
@@ -14,9 +15,11 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
+    "firebase": "^8.2.3",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
     "formik-material-ui-lab": "0.0.8",
+    "formik-material-ui-pickers": "0.0.12",
     "history": "^5.0.0",
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
